fix: Docker build action

--- a/.github/workflows/build-push-image.yaml
+++ b/.github/workflows/build-push-image.yaml
@@ -22,6 +22,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          tags: latest
+          tags: siddhantkhisty/gin-kv
           push: true 
         
