--- a/.github/workflows/kubernetes-deploy.yaml
+++ b/.github/workflows/kubernetes-deploy.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
  job_1:
    name: Create k8s deployment
-   runs-on: kuberentes-runner
+   runs-on: kubernetes-runner
    steps:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4  
