--- a/.github/workflows/kubernetes-deploy.yaml
+++ b/.github/workflows/kubernetes-deploy.yaml
@@ -12,9 +12,9 @@ jobs:
    steps:
       - name: Check out the repository to the runner
         uses: actions/checkout@v4  
-      - name: Make the script files executable
-        run: chmod +x my-script.sh my-other-script.sh
-      - name: Run the scripts
+      - name: Install kubectl
+        run: curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+      - name: Deploy the application
         run: |
           kubectl apply -f https://raw.githubusercontent.com/siddhant-khisty/key-store-gin/main/Kubernetes/svc.yaml
           kubectl apply -f https://raw.githubusercontent.com/siddhant-khisty/key-store-gin/main/Kubernetes/deply.yaml
