--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   kubernetes: circleci/kubernetes@1.3.1
+  docker: circleci/docker@2.6.0
 
 jobs:
   build: 
@@ -18,6 +19,17 @@ jobs:
       - checkout
       - run: go test -v ./
 
+  build-and-push-image:
+    docker: 
+      - image: cimg/base:current
+    steps:
+    - setup_remote_docker
+    - checkout
+    - docker/check
+    - docker/build:
+        image: Dockerfile
+    - docker/push:
+        image: siddhantkhisty/gin-kv
   
   deploy:
     docker:
@@ -51,9 +63,12 @@ workflows:
       # - security: 
       #     requires:
       #       - test
+      - build-and-push-image:
+          requires:
+          - test
       - deploy:
           requires:
-            - test
+            - build-and-push-image
           #  - security
           filters:
             branches:
