--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,78 +1,78 @@
-version: 2.1
+# version: 2.1
 
-orbs:
-  kubernetes: circleci/kubernetes@1.3.1
-  docker: circleci/docker@2.6.0
-  snyk: snyk/snyk@2.1.0
+# orbs:
+#   kubernetes: circleci/kubernetes@1.3.1
+#   docker: circleci/docker@2.6.0
+#   snyk: snyk/snyk@2.1.0
 
-jobs:
-  build: 
-    docker:
-      - image: cimg/go:1.21.5
-    steps:
-      - checkout
-      - run: go build  -v ./
-      - snyk/scan
+# jobs:
+#   build: 
+#     docker:
+#       - image: cimg/go:1.21.5
+#     steps:
+#       - checkout
+#       - run: go build  -v ./
+#       - snyk/scan
 
-  test: 
-    docker:
-      - image: cimg/go:1.21.5
-    steps:
-      - checkout
-      - run: go test -v ./
+#   test: 
+#     docker:
+#       - image: cimg/go:1.21.5
+#     steps:
+#       - checkout
+#       - run: go test -v ./
 
-  build-and-push-image:
-    docker: 
-      - image: cimg/python:3.6
-    steps:
-    - setup_remote_docker
-    - checkout
-    - docker/check
-    - docker/build:
-        image: siddhantkhisty/gin-kv
-  #  - snyk/scan:
-  #      docker-image-name: siddhantkhisty/gin-kv
-    - docker/push:
-        image: siddhantkhisty/gin-kv
+#   build-and-push-image:
+#     docker: 
+#       - image: cimg/python:3.6
+#     steps:
+#     - setup_remote_docker
+#     - checkout
+#     - docker/check
+#     - docker/build:
+#         image: siddhantkhisty/gin-kv
+#   #  - snyk/scan:
+#   #      docker-image-name: siddhantkhisty/gin-kv
+#     - docker/push:
+#         image: siddhantkhisty/gin-kv
   
-  deploy:
-    docker:
-      - image: cimg/base:current
-    resource_class: circle-runner/custom-runner
-    steps:
-       - checkout
-       - kubernetes/install-kubectl
-       - kubernetes/create-or-update-resource:
-           action-type: apply
-           resource-file-path: Kubernetes/deply.yaml
-       - kubernetes/create-or-update-resource:
-           action-type: apply
-           resource-file-path: Kubernetes/svc.yaml
-       - kubernetes/create-or-update-resource:
-           action-type: apply
-           resource-file-path: Kubernetes/ingress.yaml
+#   deploy:
+#     docker:
+#       - image: cimg/base:current
+#     resource_class: circle-runner/custom-runner
+#     steps:
+#        - checkout
+#        - kubernetes/install-kubectl
+#        - kubernetes/create-or-update-resource:
+#            action-type: apply
+#            resource-file-path: Kubernetes/deply.yaml
+#        - kubernetes/create-or-update-resource:
+#            action-type: apply
+#            resource-file-path: Kubernetes/svc.yaml
+#        - kubernetes/create-or-update-resource:
+#            action-type: apply
+#            resource-file-path: Kubernetes/ingress.yaml
 
-workflows:
-  build-test-and-deploy:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
-      - build-and-push-image:
-          requires:
-          - test
-      - prod-avaliable:
-          type: approval
-          requires: 
-            - build-and-push-image
+# workflows:
+#   build-test-and-deploy:
+#     jobs:
+#       - build
+#       - test:
+#           requires:
+#             - build
+#       - build-and-push-image:
+#           requires:
+#           - test
+#       - prod-avaliable:
+#           type: approval
+#           requires: 
+#             - build-and-push-image
           
-      - deploy:
-          requires:
-            - prod-avaliable
-          filters:
-            branches:
-              only: main
+#       - deploy:
+#           requires:
+#             - prod-avaliable
+#           filters:
+#             branches:
+#               only: main
 
 
 
