--- a/.github/workflows/build-push-image.yaml
+++ b/.github/workflows/build-push-image.yaml
@@ -1,38 +1,38 @@
----
-name: build and push docker image
-on:
-  workflow_run:
-    workflows: [build and test, CodeQL]
-    types:
-      - completed
-jobs:
-  release-docker:
-    name: Release docker image
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v3
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: siddhantkhisty/gin-kv
+# ---
+# name: build and push docker image
+# on:
+#   workflow_run:
+#     workflows: [build and test, CodeQL]
+#     types:
+#       - completed
+# jobs:
+#   release-docker:
+#     name: Release docker image
+#     if: "!contains(github.event.head_commit.message, '[skip ci]')"
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Check out the repo
+#         uses: actions/checkout@v3
+#       - name: Log in to Docker Hub
+#         uses: docker/login-action@v2
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
+#           repository: siddhantkhisty/gin-kv
       
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          tags: siddhantkhisty/gin-kv
-          push: true 
-      - name: Ping devtron server
-        run: |
-              curl --location --request POST \
-              'http://35.184.124.194:31515/orchestrator/webhook/ext-ci/3' \
-              --header 'Content-Type: application/json' \
-              --header 'api-token: ${{ secrets.DEVTRON_TOKEN }}' \
-              --data-raw '{
-              "dockerImage": "siddhantkhisty/gin-kv:latest"
-              }'
+#       - name: Build and push Docker image
+#         uses: docker/build-push-action@v2
+#         with:
+#           context: .
+#           tags: siddhantkhisty/gin-kv
+#           push: true 
+#       - name: Ping devtron server
+#         run: |
+#               curl --location --request POST \
+#               'http://35.184.124.194:31515/orchestrator/webhook/ext-ci/3' \
+#               --header 'Content-Type: application/json' \
+#               --header 'api-token: ${{ secrets.DEVTRON_TOKEN }}' \
+#               --data-raw '{
+#               "dockerImage": "siddhantkhisty/gin-kv:latest"
+#               }'
         
